# web-file-explorer

./: .dockerignore  .env.example  .gitignore  .ignorelist.txt  Dockerfile  Dockerfile.prod  PLUGIN_V2_GUIDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  env.prod.example  fix_permissions.sh  install_plugin_deps.py  package.json  pyproject.toml  setup.py  tailwind.config.js
.github/workflows/: cd.yml  ci.yml
docs/: api_reference.md  plugin_development_guide.md  production-deployment.md
nginx/conf.d/: app.conf
src/: __init__.py  __main__.py  api_models.py  app.py  app_extensions.py  file_preview.py  server.py  tailwind.config.js  tailwind_integration.py
src/plugins/: __init__.py  dependency_manager.py  models.py  plugin_base.py  plugin_config.py  requirements.txt
src/plugins/cloc_analyzer/: __init__.py  analyzer_plugin.py  manifest.json
src/plugins/code_dump/: __init__.py  dump_plugin.py  manifest.json
src/plugins/code_dump/templates/: config.html
src/plugins/file_counter/: __init__.py  counter_plugin.py  manifest.json
src/plugins/folder_dashboard/: __init__.py  dashboard_plugin.py  manifest.json
src/plugins/git_repo_analyzer/: __init__.py  git_analyzer.py  manifest.json
src/plugins/py_analyzer/: __init__.py  analyzer_plugin.py  manifest.json
src/plugins/py_uml_analyzer/: __init__.py  analyzer_plugin.py  manifest.json
src/plugins/pydantic_ai_agent/: __init__.py  agent_plugin.py  manifest.json
src/plugins/pydantic_ai_agent/prompts/: __init__.py  system_prompts.py
src/plugins/pydantic_ai_agent/tools/: __init__.py  code_tools.py  file_tools.py
src/plugins/tree_view/: manifest.json  tree_plugin.py
src/plugins/uml_generator/: __init__.py  manifest.json  uml_plugin.py
src/static/css/: components.css  styles.css  tailwind-styles.css
src/static/js/: favorites.js  plugins.js  preview.js
src/templates/: __init__.py  _base.html  explorer.html  file_preview.html  modal.html  plugin_config.html  plugin_detail.html  plugin_page_master.html
src/templates/_components/: plugin_card.html
src/templates/plugins/code_dump/templates/: config.html
tests/: test_app.py
